# test_case

./: README.md  config.yaml  pyproject.toml
app/: __main__.py  fastapi_init.py
app/handlers/: __init__.py  routers.py
app/handlers/schedule/: __init__.py  routers.py  schedule.py
app/handlers/system/: __init__.py  redirect_to_swagger.py  routers.py
app/http_clients/: __init__.py  exceptions.py  http_client.py  requests.py  schedule_client.py
app/logic/: ScheduleService.py  __init__.py
app/middlewares/: exception_handler.py
app/models/: __init__.py  schedule.py
app/schemas/: __init__.py  exceptions.py  schedule.py
app/utils/: __init__.py  config.py  logging.py  utils.py
tests/unit/: test_schedule_service.py
