[tool.poetry]
name = "test_case"
version = "1.0.0"
description = "todo"
authors = [
    "Banakh Andrei <uuetsukeu@mail.ru>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.scripts]
test_case = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
python-dotenv = ">=1.0.1,<2.0.0"
aiohttp = ">=3.11.12,<4.0.0"
pandas = ">=2.2.3,<3.0.0"
structlog = ">=25.1.0,<26.0.0"
pyyaml = ">=6.0.2,<7.0.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

